added cgi stuff

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@ music, and watching TV shows. I also enjoy eating, especially Sichuan food.</p>
     <div>
       <img src="Daniel.jpg" width="50%" height="50%" class="center">
     </div>
-    
+    <div>
+      <a href="/cgi-bin/sp1a/pistatus.cgi">Raspberry Pi Status</a>
+      <br>
+      <a href="/cgi-bin/sp1a/classpis.cgi">Raspberry Pi's Alive</a>
+    </div>    
     
 	
   </body>
