--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ music, and watching TV shows. I also enjoy eating, especially Sichuan food.</p>
       <a href="/cgi-bin/sp1a/pistatus.cgi">Raspberry Pi Status</a>
       <br>
       <a href="/cgi-bin/sp1a/classpis.cgi">Raspberry Pi's Alive</a>
+      <br>
+      <a href="forminput2.php">Area of Circle</a>
     </div>    
     
 	
