final project added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ music, and watching TV shows. I also enjoy eating, especially Sichuan food.</p>
       <a href="/cgi-bin/sp1a/classpis.cgi">Raspberry Pi's Alive</a>
       <br>
       <a href="forminput2.php">Area of Circle</a>
+      <br>
+      <a href="autokeycipher.php">Autokey Cipher</a>
     </div>    
     
 	
