--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ music, and watching TV shows. I also enjoy eating, especially Sichuan food.</p>
       <br>
       <a href="forminput2.php">Area of Circle</a>
       <br>
-      <a href="autokeycipher.php">Autokey Cipher</a>
+      <a href="fprj.html">Ciphers</a>
     </div>    
     
 	
