--- a/fprj.html
+++ b/fprj.html
@@ -17,5 +17,8 @@
      <div class ="p1">
         <a href="autokeycipher.php">Autokey Cipher</a>
      </div>
+     <div class = "p2">
+	<a href="vigenerecipher.php">Vigenere Cipher</a>
+     </div>
   </body>
 </html>
